--- a/demo.html
+++ b/demo.html
@@ -30,7 +30,7 @@
 
 
 
-<script type="text/javascript" src="js/jquery-1.12.3.js"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/carousel.js"></script>
 <script type="text/javascript">
